--- a/user/package.json
+++ b/user/package.json
@@ -6,7 +6,8 @@
     "dev": "PORT=3001 nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "APP_ENV=production nuxt generate"
+    "generate": "APP_ENV=production nuxt generate",
+    "deploy": "npm run generate && aws s3 sync dist s3://russian-typing --delete"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
